Fix compilation error.